# swe-pruner-pro

./: .gitignore  README.md  pyproject.toml
data/cases/: README.md  f1_vs_judge.jsonl  judge_holdout_100.jsonl  qualitative.jsonl
data/cases/latency_trajectories/: manifest.txt
data/cases/latency_trajectories/PSyclone/: PSyclone_41c43128b8b8.json  PSyclone_7b247722163a.json  (+1 more)
docker/: Dockerfile.coder-next.ablation  Dockerfile.coder-next.in-engine  Dockerfile.coder-next.off-engine  Dockerfile.mimo.ablation  Dockerfile.mimo.in-engine  Dockerfile.mimo.off-engine  README.md  build.sh  deploy.sh  deploy_ablation.sh  deploy_mimo.sh  deploy_mimo_ablation.sh
patches/sglang/: README.md
scripts/: build.sh  extract_features.sh  label_data.sh  run_eval.sh  run_swebench.sh  train_coder_next.sh  train_mimo.sh
src/swe_pruner_pro/: __init__.py
src/swe_pruner_pro/data/: __init__.py  extract_features.py  label_with_claude.py  pack_features.py  parse_trajectories.py  submodular_sample.py
src/swe_pruner_pro/eval/: __init__.py
src/swe_pruner_pro/model/: __init__.py  head.py  losses.py
src/swe_pruner_pro/prompts/: __init__.py  ablation_judge.py  label.py  sweqa_judge.py
src/swe_pruner_pro/serving/: __init__.py  pruner_server.py
src/swe_pruner_pro/train/: __init__.py  evaluation.py  feature_dataset.py  metrics.py  train.py
utils/: README.md
utils/figures/: f1_vs_judge.py  qualitative.py
utils/latency/: overhead_bench.py  plot_paired.py
utils/motivation/: dimred.py  eval_lr.py  fit_probe.py  lda.py  plot.py
utils/stats/: swebench.py  sweqa_pro.py
(+65 files in other folders)
